--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_HOST = '127.0.0.1'
 APP_PORT = 8000
 
+DB_HOST = '127.0.0.1'
 DB_USERNAME = 'your_user'
 DB_PASSWORD = 'your_pass'
 DB_NAME = 'englishtype'
